--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "../../.tsconfig.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/app",
-    "tsBuildInfoFile": "../../dist/app/tsconfig.tsbuildinfo",
+    "outDir": "./dist",
+    "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo",
     "rootDir": "./src"
   },
   "include": [
