--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "monorepo": "file:"
   },
   "devDependencies": {
-    "chalk": "4.1.2",
     "@types/jest": "^29.5.14",
-    "@typescript-eslint/eslint-plugin": "^8.28.0",
-    "@typescript-eslint/parser": "^8.28.0",
+    "@types/node": "^22.13.13",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "chalk": "4.1.2",
     "eslint": "^9.23.0",
+    "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.3.0",
-    "typescript": "^5.8.2"
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.1",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.29.0",
+    "rimraf": "^6.0.1"
   }
 }
