--- a/packages/app/.vscode/settings.json
+++ b/packages/app/.vscode/settings.json
@@ -6,5 +6,11 @@
   "eslint.validate": [
     "typescript"
   ],
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "files.exclude": {
+    "dist": true
+  },
+  "search.exclude": {
+    "dist": true
+  }
 }
