--- a/package.json
+++ b/package.json
@@ -4,24 +4,11 @@
   "type": "module",
   "private": true,
   "workspaces": [
-    "projects/app",
-    "projects/next-js"
   ],
   "scripts": {
     "clean": "npm run clean --workspaces",
     "lint": "npm run lint --workspaces",
     "test": "npm run test --workspaces",
-    "build": "npm run build --workspaces",
-    "clean:app": "npm run clean --workspace=@monorepo/app",
-    "lint:app": "npm run lint --workspace=@monorepo/app",
-    "test:app": "npm run test --workspace=@monorepo/app",
-    "build:app": "npm run build --workspace=@monorepo/app",
-    "start:app": "npm run start --workspace=@monorepo/app",
-    "clean:next-js": "npm run clean --workspace=@monorepo/next-js",
-    "lint:next-js": "npm run lint --workspace=@monorepo/next-js",
-    "test:next-js": "npm run test --workspace=@monorepo/next-js",
-    "build:next-js": "npm run build --workspace=@monorepo/next-js",
-    "start:next-js": "npm run start --workspace=@monorepo/next-js",
-    "dev:next-js": "npm run dev --workspace=@monorepo/next-js"
+    "build": "npm run build --workspaces"
   }
 }
