--- a/projects/next-js/package.json
+++ b/projects/next-js/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@monorepo/next-js",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "clean": "rimraf ./.next",
