--- a/projects/react/package.json
+++ b/projects/react/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "clean": "rimraf ./dist",
-    "lint": "eslint ./src",
+    "lint": "eslint .",
     "test": "vitest run",
     "build": "tsc -b && vite build",
     "start": "vite preview",
