--- a/projects/electron/package.json
+++ b/projects/electron/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "electron",
-  "productName": "electron",
+  "name": "@monorepo/electron",
   "version": "1.0.0",
-  "description": "My Electron application description",
-  "main": "src/index.js",
+  "type": "module",
+  "private": true,
   "scripts": {
+    "clean": "rimraf ./out",
+    "lint": "eslint .",
+    "test": "jest --passWithNoTests",
+    "build": "electron-forge make",
     "start": "electron-forge start",
+    "dev": "echo ToDo: dev",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "publish": "electron-forge publish"
   },
-  "keywords": [],
-  "author": {
-    "name": "Dmitry Mozulyov",
-    "email": "d.mozulyov@powertech.center"
-  },
-  "license": "MIT",
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1"
   },
@@ -28,7 +25,29 @@
     "@electron-forge/maker-zip": "^7.8.1",
     "@electron-forge/plugin-auto-unpack-natives": "^7.8.1",
     "@electron-forge/plugin-fuses": "^7.8.1",
+    "@electron-forge/plugin-vite": "^7.8.1",
     "@electron/fuses": "^1.8.0",
-    "electron": "36.2.0"
-  }
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "electron": "36.2.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-import": "^2.31.0",
+    "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "~4.5.4",
+    "vite": "^5.4.19"
+  },
+  "productName": "electron",
+  "description": "My Electron application description",
+  "main": ".vite/build/main.js",
+  "keywords": [],
+  "author": {
+    "name": "Dmitry Mozulyov",
+    "email": "d.mozulyov@powertech.center"
+  },
+  "license": "MIT"
 }
